<resources>
    <string name="app_name" translatable="false">Hanyu 3</string>
    <string name="english">English</string>
    <string name="myanmar">Myanmar</string>
    <string name="zawgyi">Myanmar(Zawgyi)</string>
    <string name="themes" translatable="false">Themes</string>
    <string name="languages">App Languages</string>
    <string name="dark_mode" translatable="false">Dark Mode</string>
    <string name="on_off" translatable="false">Off</string>
    <string name="sample_sentences">Sample Sentences</string>
    <string name="learn">Learn</string>
    <string name="listen">Listen</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="lesson_6">Lesson 6</string>
    <string name="lesson_7">Lesson 7</string>
    <string name="lesson_8">Lesson 8</string>
    <string name="lesson_9">Lesson 9</string>
    <string name="lesson_10">Lesson 10</string>
    <string name="lesson_11">Lesson 11</string>
    <string name="lesson_12">Lesson 12</string>
    <string name="lesson_13">Lesson 13</string>
    <string name="lesson_14">Lesson 14</string>
    <string name="lesson_15">Lesson 15</string>
    <string name="d312">month</string>
    <string name="d313">day</string>
    <string name="d314">yesterday</string>
    <string name="d315">holiday</string>
    <string name="d316">end; finish</string>
    <string name="d317">school starts</string>
    <string name="d318">year</string>
    <string name="d319">last year</string>
    <string name="d320">primary school</string>
    <string name="d321">semester, school term</string>
    <string name="d322">send</string>
    <string name="d323">New Year\'s Day</string>
    <string name="d324">Christmas</string>
    <string name="d325">National Day</string>
    <string name="d326">week</string>
    <string name="d327">Monday</string>
    <string name="d328">Tuesday</string>
    <string name="d329">Wednesday</string>
    <string name="d330">Thursday</string>
    <string name="d331">Friday</string>
    <string name="d332">Saturday</string>
    <string name="d333">Sunday</string>
    <string name="d334">"the day after tomorrow "</string>
    <string name="d335">the day before yesterday</string>
    <string name="d336">Mathematics</string>
    <string name="d337">art</string>
    <string name="d338">morning</string>
    <string name="d339">sports; physical training</string>
    <string name="d340">now</string>
    <string name="d341">o\'clock</string>
    <string name="d342">half</string>
    <string name="d343">zero; 0</string>
    <string name="d344">minute</string>
    <string name="d345">15 minutes</string>
    <string name="d346">differ; difference</string>
    <string name="d347">bathe</string>
    <string name="d348">sleep</string>
    <string name="d349">get up</string>
    <string name="d350">start; begin</string>
    <string name="d351">How about it?</string>
    <string name="d352">suitable</string>
    <string name="d353">cold</string>
    <string name="d354">hot</string>
    <string name="d355">comfortable</string>
    <string name="d356">season</string>
    <string name="d357">spring</string>
    <string name="d358">summer</string>
    <string name="d359">autumn</string>
    <string name="d360">winter</string>
    <string name="d361">warm</string>
    <string name="d362">cool</string>
    <string name="d363">capital</string>
    <string name="d364">beautiful</string>
    <string name="d365">city</string>
    <string name="d366">blow</string>
    <string name="d367">sometimes</string>
    <string name="d368">fall</string>
    <string name="d369">snow</string>
    <string name="d370">birthday</string>
    <string name="d371">day; number</string>
    <string name="d372">just</string>
    <string name="d373">Beijing</string>
    <string name="d374">"calligraphy"</string>
    <string name="d375">Kung Fu, martial art</string>
    <string name="d376">go online</string>
    <string name="d377">still</string>
    <string name="d378">box</string>
    <string name="d379">"daily necessities"</string>
    <string name="d380">sweet</string>
    <string name="d381">sour</string>
    <string name="d382">music</string>
    <string name="d383">new word</string>
    <string name="d384">sentence</string>
    <string name="d385">text</string>
    <string name="d386">everyone</string>
    <string name="d387">happy</string>
    <string name="d388">give</string>
    <string name="d389">present</string>
    <string name="d390">measure word for bundles</string>
    <string name="d391">(fresh)flowers</string>
    <string name="d392">problem; question</string>
    <string name="d393">tell</string>
    <string name="d394">secret</string>
    <string name="d395">aunt</string>
    <string name="d396">matter; affair; thing</string>
    <string name="d397">measure word for sealed things</string>
    <string name="d398">letter</string>
    <string name="d399">you</string>
    <string name="d400">please; ask; invite</string>
    <string name="d401">dish; vegetables</string>
    <string name="d402">sing</string>
    <string name="d403">"acrobatics"</string>
    <string name="d404">ask; let; allow; command</string>
    <string name="d405">wash</string>
    <string name="d406">socks</string>
    <string name="d407">wish</string>
    <string name="d408">happy</string>
    <string name="d409">new year</string>
    <string name="d410">pass; cross</string>
    <string name="d411">deliver</string>
    <string name="d412">tea leaves</string>
    <string name="d413">muffler</string>
    <string name="d414">Mid autumn fesitval</string>
    <string name="d415">film</string>
    <string name="d416">Peking Opera</string>
    <string name="d417">sugar; candy; sweet</string>
    <string name="d418">draw</string>
    <string name="d419">painting; picture</string>
    <string name="d420">Cola</string>
    <string name="d421">very; especially; particular</string>
    <string name="d422">cinema</string>
    <string name="d423">perform; play; act</string>
    <string name="d424">hear</string>
    <string name="d425">interesting</string>
    <string name="d426">plan to</string>
    <string name="d427">rabbit; bunny; hare</string>
    <string name="d428">goat</string>
    <string name="d429">fish</string>
    <string name="d430">prepare</string>
    <string name="d431">carrot</string>
    <string name="d432">basket</string>
    <string name="d433">green vegetables； Chinese cabbage</string>
    <string name="d434">come</string>
    <string name="d435">sea</string>
    <string name="d436">play; enjoy</string>
    <string name="d437">sand</string>
    <string name="d438">work</string>
    <string name="d439">extremely</string>
    <string name="d440">measure word for paintings</string>
    <string name="d441">company</string>
    <string name="d442">start work; go to work</string>
    <string name="d443">whole; entire; complete</string>
    <string name="d444">landscape</string>
    <string name="d445">beautiful</string>
    <string name="d446">swim</string>
    <string name="d447">(of the sun) shine upon; bask; dry in the sun</string>
    <string name="d448">sun</string>
    <string name="d449">maternal grandmother</string>
    <string name="d450">maternal grandfather</string>
    <string name="d451">story</string>
    <string name="d452">with</string>
    <string name="d453">shop; store</string>
    <string name="d454">botanical garden</string>
    <string name="d455">play chess</string>
    <string name="d456">dare</string>
    <string name="d457">oneself; own</string>
    <string name="d458">brave</string>
    <string name="d459">child</string>
    <string name="d460">already</string>
    <string name="d461">grow up</string>
    <string name="d462">Tai Chi</string>
    <string name="d463">panda</string>
    <string name="d464">buy</string>
    <string name="d465">thing</string>
    <string name="d466">welcome; meet</string>
    <string name="d467">arrive</string>
    <string name="d468">pick</string>
    <string name="d469">package; pack</string>
    <string name="d470">find; search</string>
    <string name="d471">take; pick</string>
    <string name="d472">key</string>
    <string name="d473">change</string>
    <string name="d474">run; running</string>
    <string name="d475">healthy; health</string>
    <string name="d476">car; vehicle</string>
    <string name="d477">train</string>
    <string name="d478">airplane</string>
    <string name="d479">cellphone; smartphone</string>
    <string name="d480">help</string>
    <string name="d481">wipe; rub</string>
    <string name="d482">kind of(measure word)</string>
    <string name="d483">tiger</string>
    <string name="d484">face</string>
    <string name="d485">elephant</string>
    <string name="d486">suck; absorb; inhale</string>
    <string name="d487">water</string>
    <string name="d488">grassland</string>
    <string name="d489">bamboo</string>
    <string name="d490">Hong Kong</string>
    <string name="d491">outing； go on an excursion</string>
    <string name="d492">sunny</string>
    <string name="d493">organize; organization</string>
    <string name="d494">outskirts</string>
    <string name="d495">fly(kite); put; set</string>
    <string name="d496">kite</string>
    <string name="d497">dance</string>
    <string name="d498">play hide and seek</string>
    <string name="l1s1">"What day is it today?"</string>
    <string name="l1s2">Today is January 1st.</string>
    <string name="l1s3">"Today is New Year's Day."</string>
    <string name="l1s4">"What day was yesterday? "</string>
    <string name="l1s5">Yesterday was December 25th.</string>
    <string name="l1s6">"Yesterday was Christmas. "</string>
    <string name="l1s7">"What day is tomorrow? "</string>
    <string name="l1s8">"Tomorrow is October 1st. "</string>
    <string name="l3s1">What time is it now?</string>
    <string name="l3s2">It is eight o\'clock now.</string>
    <string name="l3s3">"It's eleven past five now. "</string>
    <string name="l3s4">"It's a quarter past eleven now. "</string>
    <string name="l3s5">"It's half past eleven now. "</string>
    <string name="l3s6">"It's ten o'clock now. "</string>
    <string name="l3s7">"What time do you take a shower? "</string>
    <string name="l3s8">"I take a shower at ten in the morning. "</string>
    <string name="l3s9">What time do you sleep?</string>
    <string name="l3s10">"I go to bed at eight forty at night. "</string>
    <string name="l3heading">It\'s Half Past Eight</string>
    <string name="l3passage">"I get up at 7:10 in the morning and have breakfast at 7:30. At ten minutes to eight, my brother and I go to school together. We start class at 8:30 and have lunch at 12 noon. At three o'clock in the afternoon, I return home with my brother. "</string>
    <string name="l5s1">"Xiaoling: Xiaohua, what month is your birthday? "</string>
    <string name="l5s2">"Xiaohua: May 6th. "</string>
    <string name="l5s3">"Xiaoling: Today is May 5th, and tomorrow is your birthday! "</string>
    <string name="l5s4">"Xiaohua: Yes! Sister, go to the playground with me tomorrow, okay? "</string>
    <string name="l5s5">"Xiaoling: Good! When to go? "</string>
    <string name="l5s6">"Xiaohua: How about half past nine? "</string>
    <string name="l5s7">"Xiaoling: Good! "</string>
    <string name="l5heading">Four Seasons Of Beijing</string>
    <string name="l5passage">"Beijing is the capital of China, it is a beautiful city. There are four seasons there: March, April, May are spring; June, July, August are summer; September, October, November are autumn; December, January, February are winter. Spring in Beijing is often windy. Summer is very hot. Autumn is cool, neither cold nor hot. Winter is cold and sometimes snows. "</string>
</resources>