<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:layout_margin="8dp"
    android:background="@drawable/setting_background"
    tools:context=".SettingsFragment">

    <TextView
        android:textColor="@color/black_and_white"
        android:id="@+id/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/languages">

        <RadioButton
            android:textColor="@color/black_and_white"
            android:id="@+id/eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:textColor="@color/black_and_white"
            android:id="@+id/myan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myanmar" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zawgyi"
            android:textColor="@color/black_and_white"
            android:text="@string/zawgyi"/>
    </RadioGroup>

    <View
        android:id="@+id/line_segment"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black_and_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio"/>

    <TextView
        android:textColor="@color/black_and_white"
        android:layout_marginTop="10dp"
        android:id="@+id/themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themes"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_segment" />

    <androidx.appcompat.widget.SwitchCompat
        android:textColor="@color/black_and_white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dark_mode"
        app:layout_constraintTop_toBottomOf="@id/themes"
        android:text="@string/dark_mode"/>

    <TextView
        android:id="@+id/on_off"
        app:layout_constraintTop_toBottomOf="@id/dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/dark_mode"
        android:text="@string/on_off"/>

    <View
        android:id="@+id/line_segment2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/black_and_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_off"/>

    <com.google.android.gms.ads.AdView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-5467193675789833/4163097981"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:layout_constraintTop_toBottomOf="@id/line_segment2"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>