<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white_and_black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reading.Reading3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_sentences"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_background"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在几点？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s1"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在八点。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s2"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在十一点零五分。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s3"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="15dp"
                android:background="@color/black_and_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在十一点一刻。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s4"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在十一点半。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s5"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="现在差十分十二点。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s6"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="15dp"
                android:background="@color/black_and_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="你几点洗澡？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s7"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="我早上七点十分洗澡。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s8"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="你几点睡觉。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s9"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="我晚上八点四十睡觉。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l3s10"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="现在八点半"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/yellow_and_blue"
                android:text="@string/listen"
                android:textColor="@color/on_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="          我早上七点十分起床，七点半吃早饭。差十分八点，我和弟弟一起去学校。我们八点半开始上课，中午十二点吃午饭。下午三点，我和弟弟一起回家。"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_passage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/l3heading"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="@string/l3passage"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>