<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white_and_black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".reading.Reading5Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sample_sentences"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/general_background"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小玲： 小华，你的生日是几月几号？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s1"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 五月六号。"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s2"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小玲： 今天是五月五号，明天就是你的生日！"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s3"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 是啊！姐姐，明天和我一起去游乐场，好吗？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s4"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小玲： 好啊！几点去？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s5"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小华： 九点半怎么样？"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s6"
                android:textSize="15sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="小玲： 好的！"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pinyin_s7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l5s7"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="北京的四季"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/yellow_and_blue"
                android:text="@string/listen"
                android:textColor="@color/on_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="          北京是中国的首都， 它是一个美丽的城市。那儿有四个季节： 三月，四月，五月是春天； 六月，七月，八月是夏天； 九月，十月，十一月是秋天； 十二月，一月，二月是冬天。北京的春天常常刮风。夏天非常热。秋天很凉快，不冷也不热。冬天很冷，有时候下雪。"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pinyin_passage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/l5heading"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/general_background"
                android:padding="15dp"
                android:text="@string/l5passage"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>